WIP: Header Nav

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -113,6 +113,9 @@
     =================
 -->
 
+<div class="sliding-nav">
+  <div class="sliding-nav_nav">
+
     <div class="demo-banner">
         cfgov-refresh demo: <b>{% block demo_title %}MISSING DEMO TITLE{% endblock demo_title %}</b>
         <a class="demo-banner_back-link" href="/">
@@ -131,6 +134,9 @@
 
 
     {% include "footer.html" %}
+
+  </div><!-- END .sliding-nav_page -->
+</div><!-- END .sliding-nav -->
 
 <!--
     ============
