--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -1,5 +1,61 @@
+    <nav class="primary-nav l-wrapper-outer desktop-menu">
+        <div class="">
+            <ul class="primary-nav_top-level-list
+                       list__unstyled
+                       list__horizontal
+                       wrapper
+                       l-wrapper-inner
+                       list-expanding">
+                <li class="list_item list-expanding_list-item">
+                    <a class="list_link list_link__disabled">Consumer Guides</a>
+                </li>
+                <li class="list_item list-expanding_list-item">
+                    <a class="list_link list_link__disabled">Submit a Complaint</a>
+                </li>
+                <li class="list_item list-expanding_list-item">
+                    <a class="list_link list_link__disabled">Data & Research</a>
+                </li>
+                <li class="list_item list-expanding_list-item">
+                    <a class="list_link list_link__disabled">For Industry</a>
+                </li>
+                <li class="list_item list-expanding_list-item">    
+                    <a class="list_link list-expanding_trigger" href="#">About</a>
+                    <div class="primary-nav_subpanel desktop-menu_full-wrapper">
+                        <div class="desktop-menu_full-wrapper_decoration">
+                            <div class="wrapper l-wrapper-inner">
+                                <ul class="list__unstyled
+                                           list__horizontal
+                                           desktop-menu_horizontal-list
+                                           l-unit-container
+                                           list-expanding list-expanding_child-list">
+                                    <li class="list_item list-expanding_list-item">
+                                        <a class="list_link" href="/blog/">Blog</a>
+                                    </li>
+                                    <li class="list_item list-expanding_list-item">
+                                        <a class="list_link" href="/newsroom/">Newsroom</a>
+                                    </li>
+                                    <li class="list_item list-expanding_list-item">
+                                        <a class="list_link" href="/contact-us/">Contact Us</a>
+                                    </li>
+                                    <li class="list_item list-expanding_list-item">
+                                        <a class="list_link" href="/the-bureau/">About the Bureau</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav> <!-- END .primary-nav -->
+
+</div><!-- END .sliding-nav_nav -->
+
+<div class="sliding-nav_page">
+
     <header class="header" role="banner">
         <div class="wrapper">
+            <button class="sliding-nav_trigger" id="trigger" href="#">☰</button>
             <a href="/">
                 <img class="logo u-js-only"
                      src="/static/img/logo.svg"
@@ -20,5 +76,6 @@
                 Contact us: <a class="header_misc_tel" href="tel:8554112372">(855) 411-2372</a>
                 <a class="header_misc_es">Español</a>
             </div>
+
         </div>
-    </header><!-- END .header -->
+    </header>
