--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -948,6 +948,59 @@
 }
 
 
+.content {
+    &_title {
+        &__extra-large {
+            .h1();
+            margin-bottom: unit(29px / @font-size, em);
+            .respond-to-max(600px, {
+                .h2();
+                margin-bottom: unit(22px / @font-size, em);
+            });
+        }
+
+        &__large {
+            .h2();
+            margin-bottom: unit(22px / @font-size, em);
+            .respond-to-max(600px, {
+                .h3();
+                margin-bottom: unit(19px / @font-size, em);
+            });
+        }
+
+        &__medium {
+            .h3();
+            margin-bottom: unit(19px / @font-size, em); 
+        }
+
+        &__extra-small{
+            .h6();
+            margin-bottom: 0;
+        }
+    }
+    
+    &_desc {
+        .webfont-regular();
+        margin-bottom: 1em;
+
+        &__medium {
+            .respond-to-min(600px, {
+                .h4();
+                margin-bottom: 1em;
+            });
+        }
+
+        &__large {
+            .h4();
+            margin-bottom: unit(15px / @font-size, em);
+            .respond-to-min(600px, {
+                .h3();
+                margin-bottom: unit(19px / @font-size, em);
+            });
+        }
+    }
+}
+
 /* topdoc
   name: Sidebar items
   family: cfgov-layout
